# fast-interconnects

./: .gitignore  .rustc_info.json  .rustdoc_fingerprint.json  .ycm_extra_conf.py  CHANGELOG.md  Cargo.toml  README.md  build.rs  crates.js  search-index.js  settings.html  shell.nix  source-files.js
data-store/: Cargo.toml
data-store/src/: error.rs  join_data.rs  lib.rs
datagen/: Cargo.toml  all.html  index.html  sidebar-items.js
datagen/error/: enum.ErrorKind.html  index.html  struct.Error.html  type.Result.html
datagen/popular/: index.html  sidebar-items.js  struct.Blanas.html  struct.Kim.html
datagen/relation/: index.html  sidebar-items.js  struct.UniformRelation.html  struct.ZipfRelation.html  trait.KeyAttribute.html
datagen/src/: error.rs  lib.rs  popular.rs  relation.rs
hashjoin/: Cargo.toml  all.html  build.rs  fn.args_to_bench.html  fn.data_gen_fn.html  fn.is_percent.html  fn.main.html  index.html  sidebar-items.js  struct.CmdOpt.html
hashjoin/cpputils/: operators.cpp  radix_partition.cpp
hashjoin/error/: enum.ErrorKind.html  index.html  struct.Error.html  trait.ResultExt.html  type.Result.html
hashjoin/measurement/: index.html  sidebar-items.js
hashjoin/measurement/data_point/: fn.serialize_vec.html  index.html  struct.DataPoint.html
hashjoin/measurement/harness/: fn.measure.html  index.html  sidebar-items.js
hashjoin/measurement/hash_join_bench/: constant.GPU_MEM_SLACK_BYTES.html  index.html  sidebar-items.js  struct.HashJoinBench.html  struct.HashJoinBenchBuilder.html  struct.HashJoinPoint.html
hashjoin/src/: error.rs  main.rs  measurement.rs  operators.rs  types.rs
hashjoin/src/datagen/: popular.rs  relation.rs
hashjoin/src/measurement/: data_point.rs  harness.rs  hash_join_bench.rs
hashjoin/src/operators/: hash_join.rs  radix_partition.rs
hashjoin/types/: enum.ArgDataDistribution.html  enum.ArgDataSet.html  enum.ArgExecutionMethod.html  enum.ArgHashingScheme.html  enum.ArgMemType.html  enum.ArgPageType.html  enum.ArgTransferStrategy.html  enum.ArgTupleBytes.html  enum.DataDistribution.html  index.html  sidebar-items.js  struct.ArgMemTypeHelper.html
microbench/: Cargo.toml  all.html  build.rs  enum.ArgDeviceType.html  enum.ArgMemType.html  enum.ArgPageType.html  enum.Command.html  enum.CopyMethod.html  fn.main.html  index.html  sidebar-items.js  struct.ArgMemTypeHelper.html  struct.CmdBandwidth.html  struct.CmdCudaCopy.html  struct.CmdLatency.html  struct.CmdNumaCopy.html  struct.CmdTlbLatency.html  struct.Options.html
microbench/cpputils/: memory_bandwidth.cpp  memory_latency.cpp  numa_utils.cpp  sync_latency.cpp
microbench/cuda_memcopy/: index.html  sidebar-items.js  struct.CudaMemcopy.html  struct.DataPoint.html  struct.Measurement.html
microbench/cudautils/: cuda_clock.cu  memory_bandwidth.cu  memory_latency.cu  sync_latency.cu  tlb_latency.cu
microbench/error/: enum.ErrorKind.html  index.html  struct.Error.html  type.Result.html
microbench/include/: common.h  cpu_clock.h  cpu_memory_instructions.h  cuda_clock.h  cuda_vector.h  helper.h  ppc_intrinsics.h  timer.hpp
microbench/memory_bandwidth/: constant.WARP_MISALIGNMENT.html  enum.Benchmark.html  enum.ItemBytes.html  enum.MemoryOperation.html  enum.TileSize.html  index.html  sidebar-items.js  struct.MemoryBandwidth.html
microbench/memory_bandwidth/cpu_measurement/: index.html  sidebar-items.js  struct.CpuMeasurement.html
microbench/memory_bandwidth/cpu_memory_bandwidth/: fn.cpu_cas_bandwidth_lcg_16B.html  fn.cpu_cas_bandwidth_lcg_4B.html  fn.cpu_cas_bandwidth_lcg_8B.html  fn.cpu_cas_bandwidth_seq_16B.html  fn.cpu_cas_bandwidth_seq_4B.html  fn.cpu_cas_bandwidth_seq_8B.html  fn.cpu_read_bandwidth_lcg_16B.html  fn.cpu_read_bandwidth_lcg_4B.html  fn.cpu_read_bandwidth_lcg_8B.html  fn.cpu_read_bandwidth_seq_16B.html  fn.cpu_read_bandwidth_seq_4B.html  fn.cpu_read_bandwidth_seq_8B.html  fn.cpu_write_bandwidth_lcg_16B.html  index.html  sidebar-items.js  (+9 more)
microbench/memory_latency/: fn.cpu_stride.html  fn.write_strides.html  index.html  sidebar-items.js  struct.CpuMemoryLatency.html  struct.DataPoint.html  struct.GpuMemoryLatency.html  struct.Measurement.html  struct.MeasurementParameters.html  struct.MemoryLatency.html
microbench/numa_memcopy/: index.html  sidebar-items.js  struct.DataPoint.html  struct.NumaMemcopy.html
microbench/src/: cuda_memcopy.rs  device_information.rs  error.rs  main.rs  memory_bandwidth.rs  memory_latency.rs  numa_memcopy.rs  scratchpad.rs  sync_latency.rs  tlb_latency.rs  types.rs
microbench/tlb_latency/: index.html  sidebar-items.js  struct.TlbLatency.html
microbench/types/: enum.BareMemType.html  index.html  sidebar-items.js  struct.Block.html  struct.Cycles.html  struct.Grid.html  struct.MemTypeDescription.html  struct.ThreadCount.html  type.DeviceId.html
numa-gpu/: Cargo.toml  build.rs
numa-gpu/resources/: dot.cu  dot.ptx  noop.cu  noop.ptx
numa-gpu/src/: error.rs  lib.rs  runtime.rs  utils.rs
numa-gpu/tests/: test_cuda_backend.rs  test_dispatcher.rs
radix-join/: Cargo.toml
radix-join/src/: error.rs  execution_methods.rs  lib.rs  main.rs  measurement.rs  types.rs
radix-join/tests/: test_gpu_radix_join.rs
sql-ops/: Cargo.toml  build.rs
sql-ops/benches/: cpu_radix_partition_operator.rs  gpu_radix_partition_operator.rs  radix_partition_operator.rs
sql-ops/cpputils/: gpu_common.cpp  gpu_radix_partition.cpp  no_partitioning_join.cpp  radix_partition.cpp
sql-ops/cudautils/: gpu_common.cu  no_partitioning_join.cu  radix_join.cu  radix_partition.cu
sql-ops/include/: gpu_common.h  gpu_radix_partition.h  ppc_intrinsics.h  prefix_scan.h  prefix_scan_state.h  ptx_memory.h
sql-ops/resources/: papi.toml
sql-ops/src/: error.rs  join.rs  lib.rs  partition.rs  prefix_scan.rs
sql-ops/tests/: test_cpu_radix_partition.rs  test_cuda_radix_join.rs  test_gpu_radix_partition.rs  test_prefix_scan.rs
tpch-bench/: Cargo.toml  build.rs
tpch-bench/cpputils/: queries.cpp
tpch-bench/cudautils/: queries.cu
tpch-bench/include/: ppc_intrinsics.h
tpch-bench/src/: data_point.rs  error.rs  harness.rs  main.rs  query_6.rs  types.rs
(+1009 files in other folders)
