[package]
name = "numa-gpu"
version = "0.1.0"
authors = ["Clemens Lutz <lutzcle@cml.li>"]
license = "MPL-2.0"
repository = "https://github.com/TU-Berlin-DIMA/numa-gpu"
description = "Joins and morsel-driven parallelism using NVLink 2.0 on POWER9"
readme = "README.md"
edition = "2018"

[dependencies]
accel = { git = "https://github.com/LutzCle/accel.git" }
accel-native = { git = "https://github.com/lutzcle/accel-native" }
cuda-sys = { git = "https://github.com/LutzCle/accel.git" }
error-chain = "~0.12.0"
libc = "~0.2.43"
num = "~0.2.0"
rand = "~0.6.5"
zipf = "~5.0.1"

[target.'cfg(target_arch = "x86_64")'.dependencies]
raw-cpuid = "~6.1.0"

[build-dependencies]
cc = { version = "~1.0.25", features = ["parallel"] }

[dev-dependencies]
average = "~0.9.2"
clap = "*"
csv = "~1.0.1"
hostname = "~0.1.5"
rayon = "~1.0.3"
serde = "~1.0.76"
serde_derive = "~1.0.76"
structopt = "~0.2"

[profile.release]
debug = true
opt-level = 3

[profile.bench]
debug = true
opt-level = 3

[[bench]]
name = "hash_join"
harness = false
