[workspace]
members = [
        "datagen",
        "data-store",
        "hashjoin",
        "microbench",
        "numa-gpu",
        "radix-join",
        "sql-ops",
        "tpch-bench",
]

[profile.release]
debug = true
opt-level = 3

[profile.bench]
debug = true
opt-level = 3

[patch.crates-io]
cuda-driver-sys = { git = "https://github.com/LutzCle/cuda-sys.git", branch = "nvtx-sys" }
