[package]
name = "data-store"
version = "0.1.0"
authors = ["Clemens Lutz <lutzcle@cml.li>"]
license = "MPL-2.0"
repository = "https://github.com/TU-Berlin-DIMA/numa-gpu"
description = "A collection of data stores for SQL operators"
readme = "../README.md"
edition = "2018"

[dependencies]
csv = "~1.1.1"
flate2 = { version = "~1.0.11", features = ["zlib"], default-features = false }
rayon = "~1.2.0"
rustacuda = { git = "https://github.com/LutzCle/RustaCUDA", branch = "custom_mods_10_2" }
serde = "~1.0.76"

[dependencies.datagen]
path = "../datagen"

[dependencies.numa-gpu]
path = "../numa-gpu"
