[package]
name = "datagen"
version = "0.1.0"
authors = ["Clemens Lutz <lutzcle@cml.li>"]
license = "Apache-2.0"
repository = "https://github.com/TU-Berlin-DIMA/numa-gpu"
description = "A data generator for SQL relations"
readme = "../README.md"
edition = "2018"

[dependencies]
crossbeam-utils = "~0.6.5"
csv = "~1.1.1"
flate2 = { version = "~1.0.11", features = ["zlib"], default-features = false }
num-traits = "~0.2.0"
rand = "~0.6.5"
rayon = "~1.2.0"
serde = "~1.0.76"
serde_derive = "~1.0.76"
structopt = "~0.2"
zipf = "~5.0.1"
