[package]
name = "hashjoin"
version = "0.1.0"
authors = ["Clemens Lutz <lutzcle@cml.li>"]
license = "MPL-2.0"
repository = "https://github.com/TU-Berlin-DIMA/numa-gpu"
description = "A hash join implementation optimized for NVLink 2.0 on POWER9"
readme = "../README.md"
edition = "2018"

[dependencies]
average = "~0.9.2"
clap = "*"
csv = "~1.1.1"
cuda-sys = { git = "https://github.com/LutzCle/cuda-sys", branch = "cuda-10.0" }
error-chain = "~0.12.0"
hostname = "~0.1.5"
num-rational = "~0.2.0"
num-traits = "~0.2.0"
paste = "~0.1"
rayon = "~1.0.3"
rustacuda = { git = "https://github.com/LutzCle/RustaCUDA", branch = "custom_mods" }
serde = "~1.0.76"
serde_derive = "~1.0.76"
serde_repr = "~0.1"
structopt = "~0.2"

[dependencies.datagen]
path = "../datagen"

[dependencies.numa-gpu]
path = "../numa-gpu"

[build-dependencies]
cc = { version = "~1.0.25", features = ["parallel"] }
