[package]
name = "hashjoin"
version = "0.1.0"
authors = ["Clemens Lutz <lutzcle@cml.li>"]
license = "MPL-2.0"
repository = "https://github.com/TU-Berlin-DIMA/numa-gpu"
description = "A hash join benchmark optimized for NVLink 2.0 on POWER9"
readme = "../README.md"
edition = "2018"

[dependencies]
csv = "~1.1.1"
error-chain = "~0.12.0"
hostname = "~0.1.5"
likwid = { git = "https://github.com/LutzCle/likwid-rs.git", branch = "master" }
num-rational = "~0.2.0"
num-traits = "~0.2.0"
rayon = "~1.2.0"
rustacuda = { git = "https://github.com/LutzCle/RustaCUDA", branch = "custom_mods_10_2" }
serde = "~1.0.76"
serde_derive = "~1.0.76"
serde_repr = "~0.1"
structopt = "0.3"

[dependencies.datagen]
path = "../datagen"

[dependencies.data-store]
path = "../data-store"

[dependencies.numa-gpu]
path = "../numa-gpu"

[dependencies.sql-ops]
path = "../sql-ops"

[features]
likwid_perfmon = ["sql-ops/likwid_perfmon"]
