[package]
name = "microbench"
version = "0.1.0"
authors = ["Clemens Lutz <lutzcle@cml.li>"]
license = "MPL-2.0"
repository = "https://github.com/TU-Berlin-DIMA/numa-gpu"
description = "Performance microbenchmarks for NVLink 2.0 on POWER9"
readme = "../README.md"
edition = "2018"

[dependencies]
average = "~0.9.2"
clap = "*"
csv = "~1.1.1"
cuda-sys = { git = "https://github.com/LutzCle/cuda-sys", branch = "cuda-10.0" }
hostname = "~0.1.5"
libc = "~0.2.43"
rayon = "~1.2.0"
rustacuda = { git = "https://github.com/LutzCle/RustaCUDA", branch = "custom_mods" }
serde = "~1.0.76"
serde_derive = "~1.0.76"
structopt = "~0.2"

[dependencies.numa-gpu]
path = "../numa-gpu"

# NVML enables us to read the actual clock rate of the GPU.
# Otherwise, we use the GPU's default clock rate.
[target.'cfg(not(target_arch = "aarch64"))'.dependencies]
nvml-wrapper = { version = "0.5", features = ["serde"] }

[build-dependencies]
cc = { version = "~1.0", features = ["parallel"] }
