[package]
name = "numa-gpu"
version = "0.1.0"
authors = ["Clemens Lutz <lutzcle@cml.li>"]
license = "MPL-2.0"
repository = "https://github.com/TU-Berlin-DIMA/numa-gpu"
description = "A framework for CUDA and NUMA-aware execution using NVLink 2.0 on POWER9"
readme = "../README.md"
edition = "2018"

[dependencies]
bitflags = "~1.1.0"
crossbeam-utils = "~0.6.5"
csv = "~1.1.1"
cuda-sys = { git = "https://github.com/LutzCle/cuda-sys", branch = "cuda-10.0" }
error-chain = "~0.12.0"
libc = "~0.2.43"
num-traits = "~0.2.0"
num-rational = "~0.2.0"
rayon = "~1.0.3"
rustacuda = { git = "https://github.com/LutzCle/RustaCUDA", branch = "custom_mods" }

[dev-dependencies]
assert_approx_eq = "~1.1.0"

[target.'cfg(target_arch = "x86_64")'.dependencies]
raw-cpuid = "~6.1.0"
