[package]
name = "numa-gpu"
version = "0.1.0"
authors = ["Clemens Lutz <lutzcle@cml.li>"]
license = "MPL-2.0"
repository = "https://github.com/TU-Berlin-DIMA/numa-gpu"
description = "A framework for CUDA and NUMA-aware execution using NVLink 2.0 on POWER9"
readme = "../README.md"
edition = "2018"

[features]
default = ["nvml"]

# NVML enables us to read the actual clock rate of the GPU.
# Otherwise, we use the GPU's default clock rate.
nvml = ["nvml-wrapper"]

[dependencies]
bitflags = "~1.1.0"
crossbeam-utils = "~0.6.5"
cuda-sys = { git = "https://github.com/LutzCle/cuda-sys", branch = "cuda-10.0" }
error-chain = "~0.12.0"
libc = "~0.2.43"
num-traits = "~0.2.0"
num-rational = "~0.2.0"
rayon = "~1.2.0"
rustacuda = { git = "https://github.com/LutzCle/RustaCUDA", branch = "custom_mods" }

[dependencies.nvml-wrapper]
git = "https://github.com/Cldfire/nvml-wrapper"
branch = "devel"
optional = true
features = ["serde"]

[dev-dependencies]
assert_approx_eq = "~1.1.0"

[target.'cfg(target_arch = "x86_64")'.dependencies]
raw-cpuid = "~6.1.0"
