[package]
name = "numa-gpu"
version = "0.1.0"
authors = ["Clemens Lutz <lutzcle@cml.li>"]
license = "MPL-2.0"
repository = "https://github.com/TU-Berlin-DIMA/numa-gpu"
description = "A framework for CUDA and NUMA-aware execution using NVLink 2.0 on POWER9"
readme = "../README.md"
edition = "2018"

[dependencies]
bitflags = "1.2"
crossbeam-utils = "~0.6.5"
cuda-sys = { git = "https://github.com/LutzCle/cuda-sys", branch = "cuda-10.0" }
error-chain = "~0.12.0"
libc = "~0.2.43"
num-traits = "~0.2.0"
num-rational = "~0.2.0"
procfs = { version = "~0.8.1", default-features = false }
rayon = "~1.2.0"
rustacuda = { git = "https://github.com/LutzCle/RustaCUDA", branch = "custom_mods" }

# NVML enables us to read the actual clock rate of the GPU.
# Otherwise, we use the GPU's default clock rate.
[target.'cfg(not(target_arch = "aarch64"))'.dependencies]
nvml-wrapper = { version = "0.6", features = ["serde"] }

[dev-dependencies]
assert_approx_eq = "~1.1.0"
