[package]
name = "sql-ops"
version = "0.1.0"
authors = ["Clemens Lutz <lutzcle@cml.li>"]
license = "MPL-2.0"
repository = "https://github.com/TU-Berlin-DIMA/numa-gpu"
description = "SQL operator implementations optimized for NVLink 2.0 on POWER9"
readme = "../README.md"
edition = "2018"

[dependencies]
cstr = "0.2.8"
cuda-sys = { git = "https://github.com/LutzCle/cuda-sys", branch = "cuda-10.0" }
likwid = { git = "https://github.com/LutzCle/likwid-rs.git", branch = "master" }
num-traits = "~0.2.0"
once_cell = "1.5"
paste = "~0.1"
rustacuda = { git = "https://github.com/LutzCle/RustaCUDA", branch = "custom_mods" }

[dependencies.datagen]
path = "../datagen"

[dependencies.numa-gpu]
path = "../numa-gpu"

[build-dependencies]
cc = { version = "~1.0.25", features = ["parallel"] }
libc = "~0.2.43"

[dev-dependencies]
csv = "~1.1.1"
hostname = "0.2"
itertools = "0.9"
num_cpus = "1.11"
num-rational = "0.2"
rand = "0.7"
rayon = "~1.2.0"
serde = "~1.0.76"
serde_derive = "~1.0.76"
serde_repr = "~0.1"
structopt = "0.3"

[[bench]]
name = "cpu_radix_partition_operator"
harness = false

[[bench]]
name = "gpu_radix_partition_operator"
harness = false

[features]
likwid_perfmon = ["likwid/likwid_perfmon"]
