[package]
name = "tpch-bench"
version = "0.1.0"
authors = ["Clemens Lutz <lutzcle@cml.li>"]
license = "MPL-2.0"
repository = "https://github.com/TU-Berlin-DIMA/numa-gpu"
description = "TPC-H benchmark for GPUs with NVLink 2.0"
readme = "../README.md"
edition = "2018"

[build-dependencies]
cc = { version = "~1.0.25", features = ["parallel"] }

[dependencies]
csv = "~1.1.1"
hostname = "~0.1.5"
num-rational = "~0.2.0"
rand = "~0.7.3"
rand_distr = "0.2.2"
rayon = "~1.2.0"
rustacuda = { git = "https://github.com/LutzCle/RustaCUDA", branch = "custom_mods" }
serde = "~1.0.76"
serde_derive = "~1.0.76"
structopt = "~0.2"

[dependencies.datagen]
path = "../datagen"

[dependencies.numa-gpu]
path = "../numa-gpu"

[dependencies.sql-ops]
path = "../sql-ops"

